--- a/src/app/page.css
+++ b/src/app/page.css
@@ -21,5 +21,11 @@
 }
 
 .footer {
-    color: #7c7c7c;
+    font-size: 0.875rem;
+    color: rgba(196, 196, 196, 0.6);
+    user-select: none;
+}
+
+.main-container {
+    min-height: calc(var(--vh, 1vh) * 100);
 }
