--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,6 +25,15 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.nextjs-toast {
-  display: none !important;
+html,
+body,
+#__next {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.main-container {
+  height: calc(var(--vh, 1vh) * 100);
+  overflow: hidden;
 }
