--- a/src/app/page.css
+++ b/src/app/page.css
@@ -1,5 +1,12 @@
 .video-bg {
     filter: brightness(0.23) blur(2px);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
 }
 
 .icon-grid a {
@@ -24,8 +31,4 @@
     font-size: 0.875rem;
     color: rgba(196, 196, 196, 0.6);
     user-select: none;
-}
-
-.main-container {
-    min-height: calc(var(--vh, 1vh) * 100);
 }
