--- a/src/app/page.css
+++ b/src/app/page.css
@@ -1,13 +1,24 @@
 .video-bg {
     filter: brightness(0.23) blur(2px);
     position: absolute;
-    top: 0;
-    left: 0;
+    inset: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
     z-index: -1;
 }
+
+.content {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* dikey ortala */
+    align-items: center;
+    /* yatay ortala */
+    overflow: hidden;
+}
+
 
 .icon-grid a {
     color: rgb(194, 194, 194);
