--- a/src/app/page.css
+++ b/src/app/page.css
@@ -36,3 +36,11 @@
     color: rgba(196, 196, 196, 0.6);
     user-select: none;
 }
+
+html,
+body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
